--- a/gateway/src/main/resources/static/index.html
+++ b/gateway/src/main/resources/static/index.html
@@ -1,4 +1,79 @@
-<!doctype html>
+<html lang="en">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Angular Material style sheet -->
+<link rel="stylesheet"
+	href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+<link rel="stylesheet" href="css/app.css">
+</head>
+<body ng-app="app" ng-cloak>
+	<header>
+		<md-toolbar class="md-hue-2 toolbarOuter" md-theme="toolbar">
+		<div class="md-toolbar-tools toolbarInner" layout="row"
+			layout-align="center center">
+			<div layout="row" layout-align="center center" flex-xs="90"
+				flex-sm="70" flex-gt-sm="55">
+				<span class="alignLeft" flex="33"><p
+						class="redFont fnt16 fntWgt600">Student +</p></span> <span
+					class="alignCenter" flex="33"><p class="fnt16"></p></span> 
+					<!-- <span
+					class="alignRight" flex="33"><a class="btn" 
+						class="redFont fnt16 fntWgt600 alignRight">Sign Up</a></span> -->
+						<span
+					class="alignRight" flex="33"><a href="/login">
+						<md-button class="redFont signUpBtn">Log In</md-button></a>
+						</span>
+						
+			</div>
+
+		</div>
+		</md-toolbar>
+	</header>
+	<section>
+		Marketing Content
+	</section>
+
+<footer>
+</footer>
+
+
+	<!-- Angular Material requires Angular.js Libraries -->
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+	<!-- Angular Material Library -->
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
+	<!-- Your application bootstrap  -->
+	<script type="text/javascript">
+		/**
+		 * You must include the dependency on 'ngMaterial' 
+		 */
+		/**angular.module('app', [ 'ngMaterial' ]); **/
+	</script>
+	<script src="js/app.js">
+		
+	</script>
+
+</body>
+</html>
+
+<!--
+Copyright 2016 Google Inc. All Rights Reserved. 
+Use of this source code is governed by an MIT-style license that can be in foundin the LICENSE file at http://material.angularjs.org/license.
+-->
+
+
+
+
+<!-- <!doctype html>
 <html>
 <head>
 <title>Student NetWork</title>
@@ -25,3 +100,4 @@
 	
 </body>
 </html>
+ -->
