--- a/gateway/src/main/resources/static/index.html
+++ b/gateway/src/main/resources/static/index.html
@@ -13,8 +13,8 @@
 			layout-align="center center">
 			<div layout="row" layout-align="center center" flex-xs="90"
 				flex-sm="70" flex-gt-sm="55">
-				<span class="alignLeft" flex="33"><p
-						class="redFont fnt16 fntWgt600">Student +</p></span> <span
+				<span class="alignLeft" flex="33"> <a href="/idpapi/v1/user"><p
+						class="redFont fnt16 fntWgt600">Student +</a></p></span> <span
 					class="alignCenter" flex="33"><p class="fnt16"></p></span> 
 					<!-- <span
 					class="alignRight" flex="33"><a class="btn" 
