--- a/gateway/src/main/resources/static/index.html
+++ b/gateway/src/main/resources/static/index.html
@@ -13,14 +13,14 @@
 			layout-align="center center">
 			<div layout="row" layout-align="center center" flex-xs="90"
 				flex-sm="70" flex-gt-sm="55">
-				<span class="alignLeft" flex="33"> <a href="/idpapi/v1/user"><p
+				<span class="alignLeft" flex="33"> <a><p
 						class="redFont fnt16 fntWgt600">Student +</a></p></span> <span
 					class="alignCenter" flex="33"><p class="fnt16"></p></span> 
 					<!-- <span
 					class="alignRight" flex="33"><a class="btn" 
 						class="redFont fnt16 fntWgt600 alignRight">Sign Up</a></span> -->
 						<span
-					class="alignRight" flex="33"><a href="/login">
+					class="alignRight" flex="33"><a href="/landingPage">
 						<md-button class="redFont signUpBtn">Log In</md-button></a>
 						</span>
 						
